# Neural-network-from-scratch

./: .gitignore  CMakeLists.txt  README.md  main.cpp
layer/: Layer.cpp  Layer.h  Network.cpp  Network.h  Neuron.cpp  Neuron.h  SigmoidNeuron.cpp  SigmoidNeuron.h
weight/: SigmoidWeight.cpp  SigmoidWeight.h  Weight.cpp  Weight.h
